# genetic-chess

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  genetic-chess.cabal  hie.yaml
.github/workflows/: CI.yaml
test/: Spec.hs
